--- a/tampu-20seat.html
+++ b/tampu-20seat.html
@@ -54,7 +54,7 @@
 
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Cars </a>
+                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Vehicle </a>
                                         <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item" href="swift-dzire-car-on-rent.html">Swift Dzire
@@ -123,7 +123,7 @@
                                                     Services</a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">Taxi Booking
+                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">VehicleBooking
                                                     on Rent</a>
                                             </li>
                                             <li>
@@ -140,7 +140,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
-                                                    taxi Services</a>
+                                                    VehicleServices</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -305,7 +305,7 @@
                             <div class="row">
 
                                 <div class="my-form"><br><br>
-                                    <h2>Rent a car</h2>
+                                    <h2>Rent a Vehicle</h2>
                                     <form novalidate="" action="#" method="POST" id="contactForm">
                                         <div class="row">
                                             <div class="col-sm-6 col-xs-6">
@@ -574,7 +574,7 @@
                 <p class="para">The Maruti Ertiga has been a very popular car in the Indian market for a long time.
                     Automobile review experts and seasoned drivers hugely praise this gorgeous Maruti Ertiga car and the
                     Indian audience is not just ready to let it go.</p>
-                <p class="para">The Maruti Ertiga on rent is one of the best cars to opt for better long-distance
+                <p class="para">The Maruti Ertiga on rent is one of the best Vehicle to opt for better long-distance
                     journey. Ertiga is just another name for a reliable and comfortable car that includes cozy seats for
                     driving, mileage, safety, and adaptability for short as well as long journeys. The car is available
                     in seven beautiful different colors which is Pearl Artic White, Splendid silver, Metallic Magma
@@ -656,7 +656,7 @@
                     <div class="column" style="background-color: ;">
                         <h3>Maruti ertiga Car Charges for out of Delhi –</h3>
                         <ul class="disc">
-                            <li>Maruti ertiga on rent Taxi A/C & Non A/C @ ₹17/KM</li>
+                            <li>Maruti ertiga on rent VehicleA/C & Non A/C @ ₹17/KM</li>
                             <li>Minimum kilometer (km) counted per day - 250 km/day</li>
                             <li>Time and kilometers will be calculated from Delhi to Delhi</li>
                             <li>Driver allowance ₹400/day</li>
@@ -815,7 +815,7 @@
                 <!-- end places -->
             </div>
         </div>
-        <footer class="footer">
+       <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-2">
@@ -832,40 +832,40 @@
                     <div class="col-md-4">
                         <label>Destinations</label>
                         <ul>
-                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital Taxi Rent">Delhi
-                                    to Nainital Taxi</a></li>
+                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital VehicleRent">Delhi
+                                    to Nainital Vehicle</a></li>
                             <li><a href="delhi-to-haridwar-taxi-services.html" title="Delhi to Haridwar Taxi">Delhi to
-                                    Haridwar Taxi</a></li>
-                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Taxi on Rent">Delhi to
-                                    Mathura Taxi</a></li>
+                                    Haridwar Vehicle</a></li>
+                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Vehicleon Rent">Delhi to
+                                    Mathura Vehicle</a></li>
                             <li><a href="car-rentals-from-delhi-to-vrindavan.html"
-                                    title="Delhi to Vrindavan Taxi on Rent">Delhi to Vrindavan Taxi</a></li>
-                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Taxi on Rent">Delhi to Shimla
-                                    Taxi</a></li>
-                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Taxi on Rent">Delhi to Manali
-                                    Taxi</a></li>
+                                    title="Delhi to Vrindavan Vehicleon Rent">Delhi to Vrindavan Vehicle</a></li>
+                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Vehicleon Rent">Delhi to Shimla
+                                    Vehicle</a></li>
+                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Vehicleon Rent">Delhi to Manali
+                                    Vehicle</a></li>
                         </ul>
                         <ul>
-                            <li><a href="delhi-to-chandigarh-taxi.html">Delhi to Chandigarh Taxi</a></li>
-                            <li><a href="delhi-to-amritsar-taxi.html">Delhi to Amritsar Taxi</a></li>
-                            <li><a href="delhi-to-badrinath-taxi.html">Delhi to Badrinath Taxi</a></li>
-                            <li><a href="delhi-to-mussoorie-taxi.html">Delhi to Mussoorie Taxi</a></li>
-                            <li><a href="delhi-to-agra-taxi.html">Delhi to Agra Taxi</a></li>
-                            <li><a href="delhi-to-jaipur-taxi.html">Delhi to Jaipur Taxi</a></li>
-                            <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Taxi</a></li>
+                            <li><a href="delhi-to-chandigarh-taxi.html">Delhi to Chandigarh Vehicle</a></li>
+                            <li><a href="delhi-to-amritsar-taxi.html">Delhi to Amritsar Vehicle</a></li>
+                            <li><a href="delhi-to-badrinath-taxi.html">Delhi to Badrinath Vehicle</a></li>
+                            <li><a href="delhi-to-mussoorie-taxi.html">Delhi to Mussoorie Vehicle</a></li>
+                            <li><a href="delhi-to-agra-taxi.html">Delhi to Agra Vehicle</a></li>
+                            <li><a href="delhi-to-jaipur-taxi.html">Delhi to Jaipur Vehicle</a></li>
+                            <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Vehicle</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <label>Popular Cars</label>
+                        <label>Popular Vehicle</label>
                         <ul>
-                            <li><a href="innova-car.html">Toyota Innova Taxi</a></li>
-                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Taxi</a></li>
-                            <li><a href="tata-indica-car.html">Tata Indica Taxi</a></li>
+                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
+                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
+                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
                             <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
-                            <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li>
-                            <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li>
+                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
+                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
                             <li><a href="tata-indigo-car.html">Tata Indigo Taxi</a></li>
-                            <li><a href="etios-taxi-on-rent.html">Toyota Etios Taxi On Rent</a></li>
+                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
                         </ul>
                         <!--<ul>-->
                         <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
@@ -880,15 +880,15 @@
                     <div class="col-md-2">
                         <label>Our Services</label>
                         <ul>
-                            <li><a href="taxi-booking-on-rent.html">Taxi Service in Delhi</a></li>
-                            <li><a href="car-rental-services.html">Car Rental in Delhi</a></li>
-                            <li><a href="car-hiring-services.html">Car Hiring Services</a></li>
-                            <li><a href="cab-booking.html">Cab Booking Services</a></li>
-                            <li><a href="local-taxi-service.html">Local Taxi Service</a></li>
-                            <li><a href="local-car-rental.html">Local Car Rental</a></li>
-                            <li><a href="outstation-car-service.html">Outstation Taxi</a></li>
-                            <li><a href="one-way-cabs.html">One Way Cabs</a></li>
-                            <li><a href="airport-car-rental-services.html">Airport Taxi</a></li>
+                            <li><a href="taxi-booking-on-rent.html">Vehicle Service in Delhi</a></li>
+                            <li><a href="car-rental-services.html">Vehicle Rental in Delhi</a></li>
+                            <li><a href="car-hiring-services.html">Vehicle Hiring Services</a></li>
+                            <li><a href="cab-booking.html">Vehicle Booking Services</a></li>
+                            <li><a href="local-taxi-service.html">Local Vehicle Service</a></li>
+                            <li><a href="local-car-rental.html">Local Vehicle Rental</a></li>
+                            <li><a href="outstation-car-service.html">Outstation Vehicle</a></li>
+                            <li><a href="one-way-cabs.html">One Way Vehicle</a></li>
+                            <li><a href="airport-car-rental-services.html">Airport Vehicle</a></li>
                         </ul>
                     </div>
                 </div>
@@ -916,7 +916,6 @@
                     </div>
                 </div>
             </div>
-
 
 
             <script src="code.jquery.com/jquery-2.2.4.min.js"></script>
