--- a/terms.html
+++ b/terms.html
@@ -17,7 +17,7 @@
     <meta name="description"
         content="HSR Travel Delhi is a leading car rental service provider in Delhi for more than 15 years, hire any type of car at lowest price." />
     <meta name="keywords"
-        content="car rental company in delhi,car hire services in delhi,a/c & non a/c taxi services,one day tour in delhi,car for sightseeing tours in delhi,airport car pic & drop services,a/c & non a/c taxi services,airport car pic & drop services" />
+        content="car rental company in delhi,car hire services in delhi,a/c & non a/c Vehicleservices,one day tour in delhi,car for sightseeing tours in delhi,airport car pic & drop services,a/c & non a/c Vehicleservices,airport car pic & drop services" />
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -59,7 +59,7 @@
 
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Cars </a>
+                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Vehicle </a>
                                         <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item" href="swift-dzire-car-on-rent.html">Swift Dzire
@@ -135,7 +135,7 @@
                                                     Services</a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">Taxi Booking
+                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">VehicleBooking
                                                     on Rent</a>
                                             </li>
                                             <li>
@@ -152,7 +152,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
-                                                    taxi Services</a>
+                                                    VehicleServices</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -255,7 +255,7 @@
                 <div class="row">
                     <br><br>
                     <div class="my-form">
-                        <h2>Rent a car</h2>
+                        <h2>Rent a Vehicle</h2>
                         <form novalidate="" action="#" method="POST" id="contactForm">
                             <div class="row">
                                 <div class="col-sm-6 col-xs-6">
@@ -449,20 +449,20 @@
         <!-- deal slider  -->
         <div class="full-width w-bg">
             <div class="container">
-               <h1 class="title h-left">Terms and Conditions</h1> <p class="para">HSR Travel Delhi is a leading car rental company established in 2015, providing reliable and top-quality vehicle rental and chauffeur services across Delhi and nearby tourist destinations. Our diverse fleet includes luxury and economy cars with both AC and non-AC options. Our drivers are experienced, educated, and multilingual, ensuring safe and timely travel for all passengers.</p> <p class="para">Please read the following terms carefully before booking or using our services. Your use of our vehicles and rental services indicates your acceptance of these terms.</p> <h2>1. Booking and Payment</h2> <ul> <li>Bookings require an advance payment (typically 30%-60%) to confirm your reservation. The balance is payable at pickup.</li> <li>Payments accepted include cash, bank transfers, credit/debit cards, and online payments which may take 24-36 hours to process.</li> <li>Any payment failures or delays must be reported at least 72 hours before service to avoid cancellation.</li> <li>Rates may vary seasonally and reflect fuel price changes.</li> </ul> <h2>2. Cancellation and Refunds</h2> <ul> <li>Cancellations must be communicated through official channels; cancelling directly with drivers is not valid.</li> <li>Cancellation over 15 days prior results in a 50% refund of the advance minus GST. Less than 15 days or no-shows forfeit the advance.</li> <li>Exceptional circumstances (government restrictions, conflicts) may alter refund policies.</li> </ul> <h2>3. Vehicle Use and Safety</h2> <ul> <li>Vehicles are assigned based on availability and maintained for safety and comfort. AC use in hilly areas may be restricted.</li> <li>Unauthorized passengers or pets are prohibited.</li> <li>Clients must secure belongings; the company is not responsible for personal items lost or damaged.</li> <li>Drivers reserve the right to discontinue service for unsafe or inappropriate passenger behavior.</li> </ul> <h2>4. Charges and Extra Fees</h2> <ul> <li>Outstation trips usually have a minimum daily kilometer allowance (250 km), with additional charges for tolls, parking, overtime, and night travel.</li> <li>Local Delhi rentals have minimum time (8 hours) and kilometer (80 km) limits; night charges apply after 10 PM.</li> <li>Government taxes (GST) apply on all services.</li> </ul> <h2>5. Liability</h2> <ul> <li>The company is not liable for delays or expenses caused by traffic, weather, accidents, or force majeure events.</li> <li>Travelers must ensure medical fitness for trips.</li> <li>Legal jurisdiction for disputes is Delhi courts.</li> </ul> <p class="para">By booking or using our services, you acknowledge and accept these terms and conditions. For full details or specific queries, please contact our support team.</p>
+               <h1 class="title h-left">Terms and Conditions</h1> <p class="para">HSR Travel Delhi is a leading car rental company established in 2015, providing reliable and top-quality vehicle rental and chauffeur services across Delhi and nearby tourist destinations. Our diverse fleet includes luxury and economy Vehicle with both AC and non-AC options. Our drivers are experienced, educated, and multilingual, ensuring safe and timely travel for all passengers.</p> <p class="para">Please read the following terms carefully before booking or using our services. Your use of our vehicles and rental services indicates your acceptance of these terms.</p> <h2>1. Booking and Payment</h2> <ul> <li>Bookings require an advance payment (typically 30%-60%) to confirm your reservation. The balance is payable at pickup.</li> <li>Payments accepted include cash, bank transfers, credit/debit cards, and online payments which may take 24-36 hours to process.</li> <li>Any payment failures or delays must be reported at least 72 hours before service to avoid cancellation.</li> <li>Rates may vary seasonally and reflect fuel price changes.</li> </ul> <h2>2. Cancellation and Refunds</h2> <ul> <li>Cancellations must be communicated through official channels; cancelling directly with drivers is not valid.</li> <li>Cancellation over 15 days prior results in a 50% refund of the advance minus GST. Less than 15 days or no-shows forfeit the advance.</li> <li>Exceptional circumstances (government restrictions, conflicts) may alter refund policies.</li> </ul> <h2>3. Vehicle Use and Safety</h2> <ul> <li>Vehicles are assigned based on availability and maintained for safety and comfort. AC use in hilly areas may be restricted.</li> <li>Unauthorized passengers or pets are prohibited.</li> <li>Clients must secure belongings; the company is not responsible for personal items lost or damaged.</li> <li>Drivers reserve the right to discontinue service for unsafe or inappropriate passenger behavior.</li> </ul> <h2>4. Charges and Extra Fees</h2> <ul> <li>Outstation trips usually have a minimum daily kilometer allowance (250 km), with additional charges for tolls, parking, overtime, and night travel.</li> <li>Local Delhi rentals have minimum time (8 hours) and kilometer (80 km) limits; night charges apply after 10 PM.</li> <li>Government taxes (GST) apply on all services.</li> </ul> <h2>5. Liability</h2> <ul> <li>The company is not liable for delays or expenses caused by traffic, weather, accidents, or force majeure events.</li> <li>Travelers must ensure medical fitness for trips.</li> <li>Legal jurisdiction for disputes is Delhi courts.</li> </ul> <p class="para">By booking or using our services, you acknowledge and accept these terms and conditions. For full details or specific queries, please contact our support team.</p>
                 <p class="para">Why HSR Travel Delhi Services –</p>
                 <ul class="disc">
                     <li>Lowest & Most Competitive prices</li>
-                    <li>Online taxi booking</li>
+                    <li>Online Vehiclebooking</li>
                     <li>No credit card fees</li>
                     <li>Amend or cancel your booking online quickly and easily</li>
-                    <li>Clean & maintained cars</li>
+                    <li>Clean & maintained Vehicle</li>
                     <li>Well behaved & educated drivers</li>
                     <li>Instant service</li>
                 </ul>
 
                 <div class="dc-carousel">
-                    <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
+                    <!-- <h2 class="title">Simiar Vehicle on Rent</h2> -->
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <a href="swift-dzire-car-on-rent.html">
@@ -624,17 +624,17 @@
                     <div class="col-md-4">
                         <label>Destinations</label>
                         <ul>
-                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital Taxi Rent">Delhi
+                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital VehicleRent">Delhi
                                     to Nainital Taxi</a></li>
                             <li><a href="delhi-to-haridwar-taxi-services.html" title="Delhi to Haridwar Taxi">Delhi to
                                     Haridwar Taxi</a></li>
-                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Taxi on Rent">Delhi to
+                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Vehicleon Rent">Delhi to
                                     Mathura Taxi</a></li>
                             <li><a href="car-rentals-from-delhi-to-vrindavan.html"
-                                    title="Delhi to Vrindavan Taxi on Rent">Delhi to Vrindavan Taxi</a></li>
-                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Taxi on Rent">Delhi to Shimla
+                                    title="Delhi to Vrindavan Vehicleon Rent">Delhi to Vrindavan Taxi</a></li>
+                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Vehicleon Rent">Delhi to Shimla
                                     Taxi</a></li>
-                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Taxi on Rent">Delhi to Manali
+                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Vehicleon Rent">Delhi to Manali
                                     Taxi</a></li>
                         </ul>
                         <ul>
@@ -648,7 +648,7 @@
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <label>Popular Cars</label>
+                        <label>Popular Vehicle</label>
                         <ul>
                             <li><a href="innova-car.html">Toyota Innova Taxi</a></li>
                             <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Taxi</a></li>
@@ -657,7 +657,7 @@
                             <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li>
                             <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li>
                             <li><a href="tata-indigo-car.html">Tata Indigo Taxi</a></li>
-                            <li><a href="etios-taxi-on-rent.html">Toyota Etios Taxi On Rent</a></li>
+                            <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li>
                         </ul>
                         <!--<ul>-->
                         <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
@@ -672,11 +672,11 @@
                     <div class="col-md-2">
                         <label>Our Services</label>
                         <ul>
-                            <li><a href="taxi-booking-on-rent.html">Taxi Service in Delhi</a></li>
+                            <li><a href="taxi-booking-on-rent.html">VehicleService in Delhi</a></li>
                             <li><a href="car-rental-services.html">Car Rental in Delhi</a></li>
                             <li><a href="car-hiring-services.html">Car Hiring Services</a></li>
                             <li><a href="cab-booking.html">Cab Booking Services</a></li>
-                            <li><a href="local-taxi-service.html">Local Taxi Service</a></li>
+                            <li><a href="local-taxi-service.html">Local VehicleService</a></li>
                             <li><a href="local-car-rental.html">Local Car Rental</a></li>
                             <li><a href="outstation-car-service.html">Outstation Taxi</a></li>
                             <li><a href="one-way-cabs.html">One Way Cabs</a></li>
