--- a/delhi-to-kasauli.html
+++ b/delhi-to-kasauli.html
@@ -12,10 +12,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Delhi  Taxi, Book Cars on Rent for Tour</title>
+    <title>Delhi  Taxi, Book Vehicle on Rent for Tour</title>
     <meta name="description"
-        content="Avail the best deals on Delhi to Nainital Taxi services to make your outstation trip memorable. HSR Travel Delhi offers safe & secure journeys with clean/sanitized cabs." />
-    <meta name="keywords" content="cars for nainital tour,cab on rent for nainital,taxi booking for nainital" />
+        content="Avail the best deals on Delhi to Nainital Vehicleservices to make your outstation trip memorable. HSR Travel Delhi offers safe & secure journeys with clean/sanitized cabs." />
+    <meta name="keywords" content="Vehicle for nainital tour,cab on rent for nainital,Vehiclebooking for nainital" />
     <link rel="icon" href="img/pt-favicon.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -57,7 +57,7 @@
 
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Cars </a>
+                                        <a class="nav-link dropdown-toggle" href="javascript:void(0)">Book Vehicle </a>
                                         <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item" href="swift-dzire-car-on-rent.html">Swift Dzire
@@ -133,7 +133,7 @@
                                                     Services</a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">Taxi Booking
+                                                <a class="dropdown-item" href="taxi-booking-on-rent.html">VehicleBooking
                                                     on Rent</a>
                                             </li>
                                             <li>
@@ -150,7 +150,7 @@
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="corporate-taxi-services.html">Corporate
-                                                    taxi Services</a>
+                                                    VehicleServices</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -311,7 +311,7 @@
                 <div class="row">
 
                     <div class="my-form">
-                        <h2>Rent a car</h2>
+                        <h2>Rent a Vehicle</h2>
                         <form novalidate="" action="https://www.delhicar.in/process.php" method="POST" id="contactForm">
                             <div class="row">
                                 <div class="col-sm-6 col-xs-6">
@@ -586,7 +586,7 @@
                 <!-- end places -->
             </div>
         </div>
-        <footer class="footer">
+     <footer class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-md-2">
@@ -603,40 +603,40 @@
                     <div class="col-md-4">
                         <label>Destinations</label>
                         <ul>
-                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital Taxi Rent">Delhi
-                                    to Nainital Taxi</a></li>
+                            <li><a href="delhi-to-nainital-taxi-services.html" title="Delhi to Nainital VehicleRent">Delhi
+                                    to Nainital Vehicle</a></li>
                             <li><a href="delhi-to-haridwar-taxi-services.html" title="Delhi to Haridwar Taxi">Delhi to
-                                    Haridwar Taxi</a></li>
-                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Taxi on Rent">Delhi to
-                                    Mathura Taxi</a></li>
+                                    Haridwar Vehicle</a></li>
+                            <li><a href="delhi-to-mathura-taxi.html" title="Delhi to Mathura Vehicleon Rent">Delhi to
+                                    Mathura Vehicle</a></li>
                             <li><a href="car-rentals-from-delhi-to-vrindavan.html"
-                                    title="Delhi to Vrindavan Taxi on Rent">Delhi to Vrindavan Taxi</a></li>
-                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Taxi on Rent">Delhi to Shimla
-                                    Taxi</a></li>
-                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Taxi on Rent">Delhi to Manali
-                                    Taxi</a></li>
+                                    title="Delhi to Vrindavan Vehicleon Rent">Delhi to Vrindavan Vehicle</a></li>
+                            <li><a href="delhi-to-shimla-taxi.html" title="Delhi to Shimla Vehicleon Rent">Delhi to Shimla
+                                    Vehicle</a></li>
+                            <li><a href="delhi-to-manali-tour.html" title="Delhi to Manali Vehicleon Rent">Delhi to Manali
+                                    Vehicle</a></li>
                         </ul>
                         <ul>
-                            <li><a href="delhi-to-chandigarh-taxi.html">Delhi to Chandigarh Taxi</a></li>
-                            <li><a href="delhi-to-amritsar-taxi.html">Delhi to Amritsar Taxi</a></li>
-                            <li><a href="delhi-to-badrinath-taxi.html">Delhi to Badrinath Taxi</a></li>
-                            <li><a href="delhi-to-mussoorie-taxi.html">Delhi to Mussoorie Taxi</a></li>
-                            <li><a href="delhi-to-agra-taxi.html">Delhi to Agra Taxi</a></li>
-                            <li><a href="delhi-to-jaipur-taxi.html">Delhi to Jaipur Taxi</a></li>
-                            <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Taxi</a></li>
+                            <li><a href="delhi-to-chandigarh-taxi.html">Delhi to Chandigarh Vehicle</a></li>
+                            <li><a href="delhi-to-amritsar-taxi.html">Delhi to Amritsar Vehicle</a></li>
+                            <li><a href="delhi-to-badrinath-taxi.html">Delhi to Badrinath Vehicle</a></li>
+                            <li><a href="delhi-to-mussoorie-taxi.html">Delhi to Mussoorie Vehicle</a></li>
+                            <li><a href="delhi-to-agra-taxi.html">Delhi to Agra Vehicle</a></li>
+                            <li><a href="delhi-to-jaipur-taxi.html">Delhi to Jaipur Vehicle</a></li>
+                            <li><a href="delhi-to-rishikesh-taxi.html">Delhi to Rishikesh Vehicle</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <label>Popular Cars</label>
+                        <label>Popular Vehicle</label>
                         <ul>
-                            <li><a href="innova-car.html">Toyota Innova Taxi</a></li>
-                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Taxi</a></li>
-                            <li><a href="tata-indica-car.html">Tata Indica Taxi</a></li>
+                            <li><a href="innova-car.html">Toyota Innova Vehicle</a></li>
+                            <li><a href="swift-dzire-car-on-rent.html">Maruti Suzuki Dzire Vehicle</a></li>
+                            <li><a href="tata-indica-car.html">Tata Indica Vehicle</a></li>
                             <!--<li><a href="https://www.delhicar.in/innova-car.php">Innova Car On Rent</a></li>-->
-                            <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li>
-                            <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li>
+                            <!-- <li><a href="maruti-suzuki-wagon-r.html">Maruti Wagon R On Rent</a></li> -->
+                            <!-- <li><a href="maruti-ertiga-on-rent.html">Maruti Ertiga On Rent</a></li> -->
                             <li><a href="tata-indigo-car.html">Tata Indigo Taxi</a></li>
-                            <li><a href="etios-taxi-on-rent.html">Toyota Etios Taxi On Rent</a></li>
+                            <!-- <li><a href="etios-taxi-on-rent.html">Toyota Etios VehicleOn Rent</a></li> -->
                         </ul>
                         <!--<ul>-->
                         <!--<li><a href="javascript:void(0);">Toyota Camery Taxi</a></li>-->
@@ -651,15 +651,15 @@
                     <div class="col-md-2">
                         <label>Our Services</label>
                         <ul>
-                            <li><a href="taxi-booking-on-rent.html">Taxi Service in Delhi</a></li>
-                            <li><a href="car-rental-services.html">Car Rental in Delhi</a></li>
-                            <li><a href="car-hiring-services.html">Car Hiring Services</a></li>
-                            <li><a href="cab-booking.html">Cab Booking Services</a></li>
-                            <li><a href="local-taxi-service.html">Local Taxi Service</a></li>
-                            <li><a href="local-car-rental.html">Local Car Rental</a></li>
-                            <li><a href="outstation-car-service.html">Outstation Taxi</a></li>
-                            <li><a href="one-way-cabs.html">One Way Cabs</a></li>
-                            <li><a href="airport-car-rental-services.html">Airport Taxi</a></li>
+                            <li><a href="taxi-booking-on-rent.html">Vehicle Service in Delhi</a></li>
+                            <li><a href="car-rental-services.html">Vehicle Rental in Delhi</a></li>
+                            <li><a href="car-hiring-services.html">Vehicle Hiring Services</a></li>
+                            <li><a href="cab-booking.html">Vehicle Booking Services</a></li>
+                            <li><a href="local-taxi-service.html">Local Vehicle Service</a></li>
+                            <li><a href="local-car-rental.html">Local Vehicle Rental</a></li>
+                            <li><a href="outstation-car-service.html">Outstation Vehicle</a></li>
+                            <li><a href="one-way-cabs.html">One Way Vehicle</a></li>
+                            <li><a href="airport-car-rental-services.html">Airport Vehicle</a></li>
                         </ul>
                     </div>
                 </div>
